--- a/index.html
+++ b/index.html
@@ -30,32 +30,33 @@
 </head>
 
 <body>
-  <a-scene mindar-image="imageTargetSrc: targets.mind; maxTrack: 1" vr-mode-ui="enabled: false"
+  <a-scene mindar-image="imageTargetSrc: targets.mind; maxTrack: 4; filterMinCF: 0.001; filterBeta: 10; warmupTolerance: 10; missTolerance: 5" vr-mode-ui="enabled: false"
+    
     device-orientation-permission-ui="enabled: false" embedded
     renderer="colorManagement: true, logarithmicDepthBuffer: true">
 
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-    <!--> Matematicas </!-->
+    <!-- Matematicas -->
     <a-entity mindar-image-target="targetIndex: 0">
 
       <!-- Angulo recto (esquina superior izquierda) -->
-      <a-plane position="-0.35 0.15 0.01" rotation="90 0 0" width="0.3" height="0.4"
+      <a-plane position="-0.35 0.15 0.01" rotation="50 0 0" width="0.3" height="0.4"
         material="src: Assets/objeto_recto.png">
       </a-plane>
 
       <!-- Angulo agudo (esquina superior derecha) -->
-      <a-plane position="0.35 0.15 0.01" rotation="90 0 0" width="0.3" height="0.4"
+      <a-plane position="0.35 0.15 0.01" rotation="50 0 0" width="0.3" height="0.4"
         material="src: Assets/objeto_agudo.png">
       </a-plane>
 
       <!-- Angulo obtuso (esquina inferior izquierda) -->
-      <a-plane position="-0.35 -0.3 0.01" rotation="90 0 0" width="0.3" height="0.4"
+      <a-plane position="-0.35 -0.25 0.01" rotation="50 0 0" width="0.3" height="0.4"
         material="src: Assets/objeto_obtuso.png">
       </a-plane>
 
       <!-- Angulo llano (esquina inferior derecha) -->
-      <a-plane position="0.35 -0.3 0.01" rotation="90 0 0" width="0.3" height="0.4"
+      <a-plane position="0.35 -0.25 0.01" rotation="50 0 0" width="0.3" height="0.4"
         material="src: Assets/objeto_llano.png">
       </a-plane>
 
@@ -63,38 +64,40 @@
 
 
 
-    <!--> Comprension lectora </!-->
+    <!-- Comprension lectora -->
     <a-entity mindar-image-target="targetIndex: 1">
-      <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1"
-        material="src: Assets/ra_comprension.png"></a-plane>
+      <a-image src="Assets/ra_comprension.png" position="0 0 0.01" width="0.6" height="1"></a-image>
     </a-entity>
+      <!--<a-plane position="0 0 0" rotation="0 0 0" width="1" height="1"
+        material="src: Assets/ra_comprension.png"></a-plane>-->
+      
 
-    <!--> Familia </!-->
+    <!-- Familia -->
     <a-entity mindar-image-target="targetIndex: 2">
       <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/fam.png"></a-plane>
     </a-entity>
 
-    <!--> Emociones </!-->
+    <!-- Emociones -->
     <a-entity mindar-image-target="targetIndex: 3">
       <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/emotions.png"></a-plane>
     </a-entity>
 
-    <!--> Escuela </!-->
+    <!-- Escuela -->
     <a-entity mindar-image-target="targetIndex: 4">
       <a-plane position="0 0.5 0" rotation="0 0 0" width="1" height="1" material="src: Assets/school.png"></a-plane>
     </a-entity>
 
-    <!--> Casa </!-->
+    <!-- Casa -->
     <a-entity mindar-image-target="targetIndex: 5">
       <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/House.png"></a-plane>
     </a-entity>
 
-    <!--> Animales </!-->
+    <!-- Animales -->
     <a-entity mindar-image-target="targetIndex: 6">
       <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/Animals.png"></a-plane>
     </a-entity>
 
-    <!--> Cuerpo </!-->
+    <!-- Cuerpo -->
     <a-entity mindar-image-target="targetIndex: 7">
       <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/body.png"></a-plane>
     </a-entity>
