family target modification

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <!-- Familia -->
     <a-entity mindar-image-target="targetIndex: 2">
-      <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/fam.png"></a-plane>
+      <a-plane position="0 -0.25 0" scale="0.05 0.05 0.05" rotation="0 0 0" width="1" height="1" material="src: Assets/fam.png"></a-plane>
     </a-entity>
 
     <!-- Emociones -->
