--- a/index.html
+++ b/index.html
@@ -42,28 +42,32 @@
       <a-plane position="-0.35 0.15 0.01" rotation="50 0 0" width="0.3" height="0.4"
         material="src: Assets/objeto_recto.png">
       </a-plane>
+    </a-entity>
 
+    <a-entity mindar-image-target="targetIndex: 1"></a-entity>
       <!-- Angulo agudo (esquina superior derecha) -->
       <a-plane position="0.35 0.15 0.01" rotation="50 0 0" width="0.3" height="0.4"
         material="src: Assets/objeto_agudo.png">
       </a-plane>
+    </a-entity>
 
+    <a-entity mindar-image-target="targetIndex: 2"></a-entity>
       <!-- Angulo obtuso (esquina inferior izquierda) -->
       <a-plane position="-0.35 -0.25 0.01" rotation="50 0 0" width="0.3" height="0.4"
         material="src: Assets/objeto_obtuso.png">
       </a-plane>
+    </a-entity>
 
+    <a-entity mindar-image-target="targetIndex: 3"></a-entity>
       <!-- Angulo llano (esquina inferior derecha) -->
       <a-plane position="0.35 -0.25 0.01" rotation="50 0 0" width="0.3" height="0.4"
         material="src: Assets/objeto_llano.png">
       </a-plane>
-
     </a-entity>
 
 
-
     <!-- Comprension lectora -->
-    <a-entity mindar-image-target="targetIndex: 1">
+    <a-entity mindar-image-target="targetIndex: 4">
       <a-image src="Assets/ra_comprension.png" position="0 0 0" width="1" height="1"></a-image>
     </a-entity>
       <!--<a-plane position="0 0 0" rotation="0 0 0" width="1" height="1"
@@ -71,62 +75,62 @@
       
 
     <!-- Familia -->
-    <a-entity mindar-image-target="targetIndex: 2">
+    <a-entity mindar-image-target="targetIndex: 5">
       <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/fam.png"></a-plane>
     </a-entity>
 
     <!-- Emociones -->
-    <a-entity mindar-image-target="targetIndex: 3">
+    <a-entity mindar-image-target="targetIndex: 6">
       <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/emotions.png"></a-plane>
     </a-entity>
 
     <!-- Escuela -->
-    <a-entity mindar-image-target="targetIndex: 4">
+    <a-entity mindar-image-target="targetIndex: 7">
       <a-plane position="0 0.5 0" rotation="0 0 0" width="1" height="1" material="src: Assets/school.png"></a-plane>
     </a-entity>
 
     <!-- Casa -->
-    <a-entity mindar-image-target="targetIndex: 5">
-      <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/House.png"></a-plane>
-    </a-entity>
-
-    <!-- Animales -->
-    <a-entity mindar-image-target="targetIndex: 6">
-      <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/Animals.png"></a-plane>
-    </a-entity>
-
-    <!-- Cuerpo -->
-    <a-entity mindar-image-target="targetIndex: 7">
-      <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/body.png"></a-plane>
-    </a-entity>
-
-      <!-- Casa rompecabezas -->
     <a-entity mindar-image-target="targetIndex: 8">
       <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/House.png"></a-plane>
     </a-entity>
 
-    <!-- familia rompecabezas -->
+    <!-- Animales -->
     <a-entity mindar-image-target="targetIndex: 9">
-        <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/fam.png"></a-plane>
+      <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/Animals.png"></a-plane>
     </a-entity>
 
-    <!-- Emociones rompecabezas -->
+    <!-- Cuerpo -->
     <a-entity mindar-image-target="targetIndex: 10">
-      <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/emotions.png"></a-plane>
+      <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/body.png"></a-plane>
     </a-entity>
 
-    <!-- Cuerpo rompecabezas -->
+      <!-- Casa rompecabezas -->
     <a-entity mindar-image-target="targetIndex: 11">
       <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/House.png"></a-plane>
     </a-entity>
 
-    <!-- Animales rompecabezas -->
+    <!-- familia rompecabezas -->
     <a-entity mindar-image-target="targetIndex: 12">
+        <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/fam.png"></a-plane>
+    </a-entity>
+
+    <!-- Emociones rompecabezas -->
+    <a-entity mindar-image-target="targetIndex: 13">
+      <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/emotions.png"></a-plane>
+    </a-entity>
+
+    <!-- Cuerpo rompecabezas -->
+    <a-entity mindar-image-target="targetIndex: 14">
+      <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/House.png"></a-plane>
+    </a-entity>
+
+    <!-- Animales rompecabezas -->
+    <a-entity mindar-image-target="targetIndex: 15">
       <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/Animals.png"></a-plane>
     </a-entity>
 
     <!-- Escuela rompecabezas -->
-    <a-entity mindar-image-target="targetIndex: 13">
+    <a-entity mindar-image-target="targetIndex: 16">
       <a-plane position="0 0 0" rotation="0 0 0" width="1" height="1" material="src: Assets/school.png"></a-plane>
     </a-entity>
 
